--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,4 +15,6 @@ jobs:
         with:
           comment_tag_name: "BLOGPOSTS"
           feed_list: "https://ujjawaltiwari.hashnode.dev/rss.xml"
-          template: "$newline - $rand
+          template: "$newline - $randomEmoji(💯,🔥,💫,🚀,🌮) [$title]($url)"
+          commit_message: "recent posts section updated"
+          gh_token: ${{ secrets.GITHUB_TOKEN }}
